Added basic ins

--- a/app.ipynb
+++ b/app.ipynb
@@ -508,12 +508,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Remember to change the path of training data to your training data file and validation file, \n",
-    "# in the base_config.cfg and config.cfg file "
+    "# in the base_config.cfg and config.cfg file \n",
+    "\n",
+    "#since we dont have validation dataset, use training_data in dev as well"
    ]
   },
   {
